log
Thu Apr 21 15:29:32 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:13: error: too few arguments to function ‘tree->lower_than’
     else if(tree->lower_than(aux->pair->key)==1)
             ^~~~
Compilation failed
3b495a6
Thu Apr 21 15:30:32 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:8: error: too few arguments to function ‘tree->lower_than’
     if(tree->lower_than(aux->pair->key)==1)
        ^~~~
Compilation failed
89090d2
Thu Apr 21 15:31:52 UTC 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:13: error: too few arguments to function ‘tree->lower_than’
     else if(tree->lower_than(aux->pair->key)==1)
             ^~~~
Compilation failed
49f87b3
Thu Apr 21 15:32:49 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
f10363d
Thu Apr 21 15:37:06 UTC 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:52:20: error: ‘map’ undeclared (first use in this function)
   TreeNode * aux = map->root;
                    ^~~
treemap.c:52:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:55:13: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
       aux = tree->left;
             ^~~~
             free
treemap.c:56:15: error: expected identifier before ‘)’ token
       if(aux->)
               ^
Compilation failed
6584744
Thu Apr 21 15:38:04 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:52:20: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   TreeNode * aux = tree->root;
                    ^~~~
                    free
treemap.c:52:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
01a7659
Thu Apr 21 15:41:24 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
30e3a25
